[package]
name = "nature_demo_common"
version = "0.1.0"
authors = ["llxxbb <llxxbb@yeah.net>"]
edition = "2018"
workspace = "../Nature"

description = "Demo converter common object definitions"
repository = "https://github.com/llxxbb/Nature-Demo-Common.git"
license = "MIT"


[dependencies]
nature_common = {path = "../Nature-Common", version="0.0.2"}
