[package]
name = "nature_demo_common"
version = "0.2.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
workspace = "../Nature"

description = "Demo converter common object definitions"
repository = "https://github.com/llxxbb/Nature-Demo-Common.git"
license = "MIT"


[dependencies]
nature_common = {path = "../Nature-Common", version="0.2.0"}
serde = "1.0"
serde_derive = "1.0"
